--- a/css/styles.css
+++ b/css/styles.css
@@ -94,6 +94,9 @@ img {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contact-link:hover {
   color: var(--color-akcent);
@@ -129,6 +132,9 @@ img {
   padding-bottom: 32px;
 
   color: var(--color-text-primary);
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav-studio:hover,
 .nav-studio:focus {
@@ -184,6 +190,9 @@ img {
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.06em;
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .main-button:hover,
 .main-button:focus {
@@ -309,6 +318,9 @@ img {
   width: 100%;
   height: 100%;
   fill: var(--icon-color);
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team-link:hover {
   background-color: var(--color-akcent);
@@ -342,6 +354,9 @@ img {
   fill: var(--icon-color);
   width: 100%;
   height: 100%;
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .customers-link:hover {
   color: var(--color-akcent);
@@ -375,6 +390,9 @@ img {
   padding: 6px 22px;
   color: var(--color-text-primary);
   background-color: var(--background-color-secondary);
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   font-family: inherit;
   border: none;
   border-radius: 4px;
@@ -428,6 +446,47 @@ img {
   border-top: 0;
   padding: 20px 24px;
 }
+.projects-card {
+  position: relative;
+}
+.card-text {
+  position: absolute;
+  width: 370px;
+  height: 294px;
+  top: 0;
+  left: 0;
+  color: var(--background-color-primary);
+  background-color: var(--color-akcent);
+  transition-property: background-color;
+  transition-duration: 1000ms;
+  /*transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
+  /* transition: background-color 1000ms cubic-bezier(0.4, 0, 0.2, 1); */
+  font-family: 'Roboto';
+  font-style: normal;
+  font-size: 18px;
+  line-height: 28px;
+  letter-spacing: 0.03em;
+  padding: 63px 24px;
+  opacity: 0;
+}
+.card-text:hover {
+  position: absolute;
+  width: 370px;
+  height: 294px;
+  top: 0;
+  left: 0;
+  color: var(--background-color-primary);
+  background-color: var(--color-akcent);
+  font-family: 'Roboto';
+  font-style: normal;
+  font-size: 18px;
+  line-height: 28px;
+  letter-spacing: 0.03em;
+  padding: 63px 24px;
+  opacity: 0.9;
+}
+
+
 /* footer */
 .footer {
   display: block;
@@ -469,6 +528,9 @@ img {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.14;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-info:hover,
 .footer-info:focus {
@@ -506,6 +568,9 @@ img {
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.1);
   color: var(--background-color-primary);
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-list .icon {
   fill: currentColor;
