--- a/css/styles.css
+++ b/css/styles.css
@@ -417,7 +417,9 @@ img {
 }
 .projects-card:hover {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
 }
+
 .projects .item {
   flex-basis: calc((100% - 60px) / 3);
   margin-right: 30px;
@@ -455,12 +457,11 @@ img {
   height: 294px;
   top: 0;
   left: 0;
-  color: var(--background-color-primary);
   background-color: var(--color-akcent);
-  transition-property: background-color;
-  transition-duration: 1000ms;
-  /*transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
-  /* transition: background-color 1000ms cubic-bezier(0.4, 0, 0.2, 1); */
+  transition-property: background-color: var(--color-akcent);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  color: var(--background-color-primary);
   font-family: 'Roboto';
   font-style: normal;
   font-size: 18px;
@@ -470,19 +471,6 @@ img {
   opacity: 0;
 }
 .card-text:hover {
-  position: absolute;
-  width: 370px;
-  height: 294px;
-  top: 0;
-  left: 0;
-  color: var(--background-color-primary);
-  background-color: var(--color-akcent);
-  font-family: 'Roboto';
-  font-style: normal;
-  font-size: 18px;
-  line-height: 28px;
-  letter-spacing: 0.03em;
-  padding: 63px 24px;
   opacity: 0.9;
 }
 
