--- a/css/styles.css
+++ b/css/styles.css
@@ -147,6 +147,20 @@ img {
 .nav-studio:visited {
   color: var(--color-akcent);
 }
+.site-nav-list .item {
+  position: relative;
+}
+.nav-studio::after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  content: '';
+  width: 100%;
+  height: 4px;
+  background-color: var(--color-akcent);
+  border-radius: 2px;
+}
+
 /* main */
 .main {
   display: block;
@@ -260,6 +274,25 @@ img {
 }
 .what-we-do .item:nth-child(3n) {
   margin-right: 0;
+}
+.what-we-do-card {
+  position: relative;
+}
+.what-we-do-description {
+  position: absolute;
+  background-color: rgba(47, 48, 58, 0.8);
+  color: var(--background-color-primary);
+  bottom: 0;
+  width: 100%;
+  height: 70px;
+  margin-bottom: 0;
+  padding: 27px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
 }
 /* our team */
 .section.section-team {
@@ -419,7 +452,6 @@ img {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   cursor: pointer;
 }
-
 .projects .item {
   flex-basis: calc((100% - 60px) / 3);
   margin-right: 30px;
