--- a/css/styles.css
+++ b/css/styles.css
@@ -489,6 +489,7 @@ img {
   height: 294px;
   top: 0;
   left: 0;
+  transform: translateY(100%) ;
   background-color: var(--color-akcent);
   transition-property: background-color: var(--color-akcent);
   transition-duration: 250ms;
@@ -502,8 +503,10 @@ img {
   padding: 63px 24px;
   opacity: 0;
 }
-.card-text:hover {
+.projects-card:hover .card-text {
+  transform: translateY(0);
   opacity: 0.9;
+  transition: transform 250ms;
 }
 
 
@@ -609,3 +612,28 @@ img {
   align-items: baseline;
 }
 
+/* Modal */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%; 
+  background-color: rgba(0, 0, 0, 0.2);
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 528px;
+  height: 581px;
+  max-height: 581px;
+  background-color: var(--background-color-primary);
+  border-radius: 4px;
+}
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
