--- a/css/styles.css
+++ b/css/styles.css
@@ -482,18 +482,19 @@ img {
 }
 .projects-card {
   position: relative;
+  overflow: hidden;
 }
 .card-text {
   position: absolute;
-  width: 370px;
-  height: 294px;
+  width: 100%;
+  height: 101%;
   top: 0;
   left: 0;
   transform: translateY(100%) ;
-  background-color: var(--color-akcent);
   transition-property: background-color: var(--color-akcent);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: var(--color-akcent);
   color: var(--background-color-primary);
   font-family: 'Roboto';
   font-style: normal;
@@ -501,14 +502,13 @@ img {
   line-height: 28px;
   letter-spacing: 0.03em;
   padding: 63px 24px;
-  opacity: 0;
+  opacity: 0.9;
 }
 .projects-card:hover .card-text {
   transform: translateY(0);
   opacity: 0.9;
   transition: transform 250ms;
 }
-
 
 /* footer */
 .footer {
@@ -620,20 +620,43 @@ img {
   width: 100%;
   height: 100%; 
   background-color: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
   width: 528px;
+  max-width: 528px;
   height: 581px;
   max-height: 581px;
   background-color: var(--background-color-primary);
   border-radius: 4px;
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 1000ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .is-hidden {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
+}
+.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.9);
+}
+.modal-button {
+  width: 30px;
+  height: 30px;
+  background-color: var(--background-color-primary);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  margin-top: 8px;
+  margin-left: 490px;
+}
+.modal-close {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
 }
