--- a/css/styles.css
+++ b/css/styles.css
@@ -448,7 +448,7 @@ img {
   display: flex;
   flex-wrap: wrap;
 }
-.projects-card:hover {
+.projects .item:hover {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   cursor: pointer;
 }
@@ -484,10 +484,11 @@ img {
   position: relative;
   overflow: hidden;
 }
+
 .card-text {
   position: absolute;
   width: 100%;
-  height: 101%;
+  height: 100%;
   top: 0;
   left: 0;
   transform: translateY(100%) ;
@@ -504,10 +505,12 @@ img {
   padding: 63px 24px;
   opacity: 0.9;
 }
-.projects-card:hover .card-text {
+.projects .item:hover .card-text {
   transform: translateY(0);
   opacity: 0.9;
   transition: transform 250ms;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
 }
 
 /* footer */
@@ -634,7 +637,7 @@ img {
   background-color: var(--background-color-primary);
   border-radius: 4px;
   transform: translate(-50%, -50%) scale(1);
-  transition: transform 1000ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .is-hidden {
   opacity: 0;
