--- a/css/styles.css
+++ b/css/styles.css
@@ -94,15 +94,13 @@ img {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+}
+.contact-link:hover,
+.contact-link:focus {
+  color: var(--color-akcent);
   transition-property: color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.contact-link:hover {
-  color: var(--color-akcent);
-}
-.contact-link:focus {
-  color: var(--color-akcent);
 }
 .icon-contact {
   margin-right: 10px;
@@ -132,17 +130,21 @@ img {
   padding-bottom: 32px;
 
   color: var(--color-text-primary);
-  transition-property: color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  ;
 }
 .nav-studio:hover,
 .nav-studio:focus {
   color: var(--color-akcent);
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
 }
 .nav-page:hover,
 .nav-page:focus {
   color: var(--color-akcent);
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
 }
 .nav-studio:visited {
   color: var(--color-akcent);
@@ -204,13 +206,13 @@ img {
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.06em;
-  transition-property: background-color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .main-button:hover,
 .main-button:focus {
   background-color: var(--background-color-akcent-secondary);
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /*features*/
@@ -351,21 +353,18 @@ img {
   width: 100%;
   height: 100%;
   fill: var(--icon-color);
-  transition-property: fill;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  border-radius: 50%;
 }
-.team-link:hover {
+.team-link:hover,
+.team-link:focus {
   background-color: var(--color-akcent);
   border-radius: 50%;
   cursor: pointer;
   fill: var(--background-color-primary);
+  transition-property: background-color, fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.team-link:focus {
-  background-color: var(--color-akcent);
-  border-radius: 50%;
-  fill: var(--background-color-primary);
-  }
 
 /* customers */
 .customers {
@@ -387,23 +386,17 @@ img {
   fill: var(--icon-color);
   width: 100%;
   height: 100%;
-  transition-property: fill;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.customers-link:hover {
-  color: var(--color-akcent);
-  border: 1px solid var(--color-akcent);
-  border-radius: 4px;
-  cursor: pointer;
-  fill: currentColor;
-}
+.customers-link:hover,
 .customers-link:focus {
   color: var(--color-akcent);
   border: 1px solid var(--color-akcent);
   border-radius: 4px;
   cursor: pointer;
   fill: currentColor;
+  transition-property: border-color, fill;
+  transition-duration: 2500ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* portfolio */
@@ -423,9 +416,6 @@ img {
   padding: 6px 22px;
   color: var(--color-text-primary);
   background-color: var(--background-color-secondary);
-  transition-property: background-color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   font-family: inherit;
   border: none;
   border-radius: 4px;
@@ -439,18 +429,18 @@ img {
 .button-portfolio:focus {
   color: var(--background-color-primary);
   background-color: var(--color-akcent);
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  transition-property: background-color, color, box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button-flex .item:not(:last-child) {
   margin-right: 8px;
 }
+
 .projects {
   display: flex;
   flex-wrap: wrap;
-}
-.projects .item:hover {
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  cursor: pointer;
 }
 .projects .item {
   flex-basis: calc((100% - 60px) / 3);
@@ -482,9 +472,15 @@ img {
 }
 .projects-card {
   position: relative;
+  width: 370px;
+  height: 294px;
   overflow: hidden;
 }
-
+.link-overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
 .card-text {
   position: absolute;
   width: 100%;
@@ -492,9 +488,6 @@ img {
   top: 0;
   left: 0;
   transform: translateY(100%) ;
-  transition-property: background-color: var(--color-akcent);
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   background-color: var(--color-akcent);
   color: var(--background-color-primary);
   font-family: 'Roboto';
@@ -509,6 +502,19 @@ img {
   transform: translateY(0);
   opacity: 0.9;
   transition: transform 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
+}
+.link-overlay:hover .card-text,
+.link-overlay:focus .card-text {
+  transform: translateY(0);
+  opacity: 0.9;
+  transition-property: background-color;
+  transition: transform 2500ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
+}
+.projects .item:hover {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   cursor: pointer;
 }
@@ -554,13 +560,13 @@ img {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.14;
-  transition-property: color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-info:hover,
 .footer-info:focus {
   color: var(--color-akcent);
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-contacts .item:nth-last-child(2) {
   margin-bottom: 12px;
@@ -594,21 +600,18 @@ img {
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.1);
   color: var(--background-color-primary);
-  transition-property: background-color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-list .icon {
   fill: currentColor;
 }
-.footer-link:hover {
-  background-color: var(--color-akcent);
-  border-radius: 50%;
-  cursor: pointer;
-}
+.footer-link:hover,
 .footer-link:focus {
   background-color: var(--color-akcent);
   border-radius: 50%;
+  cursor: pointer;
+  transition-property: background-color, border-radius;
+  transition-duration: 2500ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .container.footer-box {
   display: flex;
@@ -637,7 +640,7 @@ img {
   background-color: var(--background-color-primary);
   border-radius: 4px;
   transform: translate(-50%, -50%) scale(1);
-  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .is-hidden {
   opacity: 0;
